clusters/lab/platform/observability/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: flux-system
spec:
  ingressClassName: nginx
  rules:
    - host: prom.15.237.160.182.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: kube-prom-stack-kube-prome-prometheus, port: { number: 9090 } }  # adapte si besoin
